--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.29.0",
     "axios": "^1.6.8",
     "next": "14.1.4",
     "react": "^18",
