--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "eslint-plugin-no-relative-import-paths": "^1.5.3",
+    "husky": "^9.0.11",
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.13",
