build(pkg): add rules - format, lint:fix

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "format": "prettier --write .",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
     "prepare": "husky install"
   },
   "dependencies": {
