--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@storybook/addon-interactions": "^8.0.6",
     "@storybook/addon-links": "^8.0.6",
     "@storybook/addon-onboarding": "^8.0.6",
+    "@storybook/addon-viewport": "^8.0.6",
     "@storybook/blocks": "^8.0.6",
     "@storybook/nextjs": "^8.0.6",
     "@storybook/react": "^8.0.6",
