--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.13",
     "storybook": "^8.0.6",
+    "swagger-typescript-api": "^13.0.3",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   },
