--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint:fix": "next lint --fix",
     "prepare": "husky install",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "sta": "sta -p https://api.example.com/api-docs-json -o types -n __generated__.d.ts --no-client"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
