--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.0.25",
     "lucide-react": "^0.365.0",
     "next": "14.1.4",
