--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@storybook/nextjs": "^8.0.6",
     "@storybook/react": "^8.0.6",
     "@storybook/test": "^8.0.6",
+    "@svgr/webpack": "^8.1.0",
     "@tanstack/react-query-devtools": "^5.29.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^20",
