--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "framer-motion": "^11.0.25",
     "lucide-react": "^0.365.0",
     "next": "14.1.4",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
     "react-responsive-masonry": "^2.2.0",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
