--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "prepare": "husky install",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "sta": "sta -p https://api.example.com/api-docs-json -o types -n __generated__.d.ts --axios",
+    "sta": "sta -p https://api.example.com/api-docs-json -o __generated__ --modular --axios --extract-request-params --extract-request-body --extract-response-body --extract-response-error",
     "chromatic": "npx chromatic --project-token=chpt_1234567890"
   },
   "dependencies": {
