--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
     "react-responsive-masonry": "^2.2.0",
+    "recoil": "^0.7.7",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
