--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "format": "prettier --write .",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
-    "prepare": "husky install",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "sta": "sta -p https://api.example.com/api-docs-json -o __generated__ --modular --axios --extract-request-params --extract-request-body --extract-response-body --extract-response-error",
-    "chromatic": "npx chromatic --project-token=chpt_1234567890"
+    "sta": "sta -p https://api.blccu.com/api-docs-json -o __generated__ --modular --axios --extract-request-params --extract-request-body --extract-response-body --extract-response-error",
+    "chromatic": "npx chromatic --project-token=chpt_1234567890",
+    "update-deps": "ncu -u && pnpm i",
+    "prepare": "husky install"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.3.4",
+    "@hookform/resolvers": "^3.4.2",
     "@lukemorales/query-key-factory": "^1.3.4",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -29,72 +30,72 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
-    "@tanstack/react-query": "^5.29.0",
-    "@tiptap/extension-color": "^2.3.0",
-    "@tiptap/extension-font-family": "^2.3.0",
-    "@tiptap/extension-image": "^2.3.0",
-    "@tiptap/extension-placeholder": "^2.3.0",
-    "@tiptap/extension-text-align": "^2.3.0",
-    "@tiptap/extension-text-style": "^2.3.0",
-    "@tiptap/extension-underline": "^2.3.0",
-    "@tiptap/pm": "^2.3.0",
-    "@tiptap/react": "^2.3.0",
-    "@tiptap/starter-kit": "^2.3.0",
-    "axios": "^1.6.8",
+    "@tanstack/react-query": "^5.40.0",
+    "@tiptap/extension-color": "^2.4.0",
+    "@tiptap/extension-font-family": "^2.4.0",
+    "@tiptap/extension-image": "^2.4.0",
+    "@tiptap/extension-placeholder": "^2.4.0",
+    "@tiptap/extension-text-align": "^2.4.0",
+    "@tiptap/extension-text-style": "^2.4.0",
+    "@tiptap/extension-underline": "^2.4.0",
+    "@tiptap/pm": "^2.4.0",
+    "@tiptap/react": "^2.4.0",
+    "@tiptap/starter-kit": "^2.4.0",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
+    "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
-    "framer-motion": "^11.0.25",
+    "framer-motion": "^11.2.10",
     "html2canvas": "^1.4.1",
-    "lucide-react": "^0.365.0",
-    "next": "14.1.4",
+    "lucide-react": "^0.381.0",
+    "next": "14.2.3",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.51.2",
+    "react-hook-form": "^7.51.5",
     "react-responsive-masonry": "^2.2.0",
     "recoil": "^0.7.7",
     "sonner": "^1.4.41",
-    "tailwind-merge": "^2.2.2",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4",
+    "zod": "^3.23.8",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^1.3.1",
-    "@storybook/addon-a11y": "^8.0.6",
-    "@storybook/addon-essentials": "^8.0.6",
-    "@storybook/addon-interactions": "^8.0.6",
-    "@storybook/addon-links": "^8.0.6",
-    "@storybook/addon-onboarding": "^8.0.6",
-    "@storybook/addon-viewport": "^8.0.6",
-    "@storybook/blocks": "^8.0.6",
-    "@storybook/nextjs": "^8.0.6",
-    "@storybook/react": "^8.0.6",
-    "@storybook/test": "^8.0.6",
+    "@chromatic-com/storybook": "^1.5.0",
+    "@storybook/addon-a11y": "^8.1.5",
+    "@storybook/addon-essentials": "^8.1.5",
+    "@storybook/addon-interactions": "^8.1.5",
+    "@storybook/addon-links": "^8.1.5",
+    "@storybook/addon-onboarding": "^8.1.5",
+    "@storybook/addon-viewport": "^8.1.5",
+    "@storybook/blocks": "^8.1.5",
+    "@storybook/nextjs": "^8.1.5",
+    "@storybook/react": "^8.1.5",
+    "@storybook/test": "^8.1.5",
     "@svgr/webpack": "^8.1.0",
-    "@tanstack/react-query-devtools": "^5.29.0",
+    "@tanstack/react-query-devtools": "^5.40.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-responsive-masonry": "^2.1.3",
-    "@typescript-eslint/eslint-plugin": "^7.5.0",
-    "@typescript-eslint/parser": "^7.5.0",
-    "autoprefixer": "^10.0.1",
-    "chromatic": "^11.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.4",
-    "eslint-plugin-no-relative-import-paths": "^1.5.3",
+    "@typescript-eslint/eslint-plugin": "^7.11.0",
+    "@typescript-eslint/parser": "^7.11.0",
+    "autoprefixer": "^10.4.19",
+    "chromatic": "^11.5.0",
+    "eslint": "^9",
+    "eslint-config-next": "14.2.3",
+    "eslint-plugin-no-relative-import-paths": "^1.5.4",
     "eslint-plugin-storybook": "^0.8.0",
-    "husky": "^8.0.0",
-    "lint-staged": "^15.2.2",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.5",
     "postcss": "^8",
     "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.13",
-    "storybook": "^8.0.6",
+    "prettier-plugin-tailwindcss": "^0.6.1",
+    "storybook": "^8.1.5",
     "swagger-typescript-api": "^13.0.3",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5"
   },
   "lint-staged": {
