--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.5.0",
     "@lukemorales/query-key-factory": "^1.3.4",
+    "@imgly/background-removal": "^1.5.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -46,6 +47,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.2.10",
+    "html-to-image": "^1.11.11",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.383.0",
     "next": "14.2.3",
@@ -58,6 +60,7 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8",
+    "tiptap-extension-font-size": "^1.2.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
