--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.5.0",
-    "@lukemorales/query-key-factory": "^1.3.4",
     "@imgly/background-removal": "^1.5.1",
+    "@lukemorales/query-key-factory": "^1.3.4",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -32,10 +32,19 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-query": "^5.40.1",
+    "@tiptap/extension-bold": "^2.4.0",
     "@tiptap/extension-color": "^2.4.0",
+    "@tiptap/extension-document": "^2.4.0",
+    "@tiptap/extension-dropcursor": "^2.4.0",
     "@tiptap/extension-font-family": "^2.4.0",
+    "@tiptap/extension-gapcursor": "^2.4.0",
+    "@tiptap/extension-history": "^2.4.0",
     "@tiptap/extension-image": "^2.4.0",
+    "@tiptap/extension-italic": "^2.4.0",
+    "@tiptap/extension-paragraph": "^2.4.0",
     "@tiptap/extension-placeholder": "^2.4.0",
+    "@tiptap/extension-strike": "^2.4.0",
+    "@tiptap/extension-text": "^2.4.0",
     "@tiptap/extension-text-align": "^2.4.0",
     "@tiptap/extension-text-style": "^2.4.0",
     "@tiptap/extension-underline": "^2.4.0",
@@ -59,8 +68,8 @@
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8",
     "tiptap-extension-font-size": "^1.2.0",
+    "zod": "^3.23.8",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
