--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "lucide-react": "^0.383.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
+    "nuqs": "^1.17.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
