--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@tiptap/extension-color": "^2.4.0",
     "@tiptap/extension-document": "^2.4.0",
     "@tiptap/extension-dropcursor": "^2.4.0",
-    "@tiptap/extension-font-family": "^2.4.0",
+    "@tiptap/extension-font-family": "2.5.0-beta.4",
     "@tiptap/extension-gapcursor": "^2.4.0",
     "@tiptap/extension-history": "^2.4.0",
     "@tiptap/extension-image": "^2.4.0",
