--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "husky": "^9.0.11",
     "is-ci": "^3.0.1",
     "lint-staged": "^15.2.5",
+    "next-pwa": "^5.6.0",
     "postcss": "^8",
     "prettier": "^3.3.1",
     "prettier-plugin-tailwindcss": "^0.6.1",
