--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "dayjs": "^1.11.12",
     "framer-motion": "^11.2.10",
     "html-to-image": "^1.11.11",
     "html2canvas": "^1.4.1",
